--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">android-intro</string>
+    <string name="hello_stranger">Hello Stranger!</string>
+    <string name="send">Send</string>
+    <string name="type_your_name">Type your name…</string>
+    <string name="open">Open</string>
+    <string name="back">Back</string>
+    <string name="field_required">This field is required!</string>
 </resources>
